--- a/web/css/bootstrap.css
+++ b/web/css/bootstrap.css
@@ -1554,7 +1554,7 @@ select:focus:required:invalid:focus {
 
 .help-block,
 .help-inline {
-  color: #595959;
+  color: #ffffff;
 }
 
 .help-block {
